--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.13",
+    "@types/prompts": "^2.0.14",
     "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
-    "clipboardy": "^3.0.0",
+    "chalk": "^4.1.2",
+    "clipboardy": "^2.3.0",
     "commander": "^9.0.0",
     "lodash": "^4.17.21",
-    "ora": "^6.0.1"
+    "ora": "^6.0.1",
+    "prompts": "^2.4.2"
   }
 }
