--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "scripts": "build/**/*.js"
   },
   "scripts": {
-    "package:linux": "pkg . --no-bytecode --targets node14-linux-x64 --output bin/linux/snip",
-    "package:macos": "pkg . --no-bytecode --targets node14-macos-x64 --output bin/macos/snip",
+    "package:linux": "pkg . --no-bytecode --targets node14-linux-x64 --output bin/linux/jumps",
+    "package:macos": "pkg . --no-bytecode --targets node14-macos-x64 --output bin/macos/jumps",
     "build": "tsc",
     "watch": "tsc -w",
     "start": "node build/start.js"
@@ -38,7 +38,8 @@
     "@types/prompts": "^2.0.14",
     "nodemon": "^2.0.15",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "pkg": "^5.5.2"
   },
   "dependencies": {
     "chalk": "^4.1.2",
