--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -2,6 +2,8 @@ name: Build binaries for macOS and Linux, publish Node.js packages, create relea
 
 on:
   push:
+    tags:
+      - 'v*'
 
 jobs:
   build-macos:
